--- a/form.html
+++ b/form.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Pink</title>
+  <title>Pink</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
             <a class="main-nav__link">Конкурс</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
+            <a class="main-nav__link" target="_blank" href="https://htmlacademy.ru/">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -79,164 +79,164 @@
               <div class="form__border-wrapper">
                 <div class="form__title-wrapper">
                   <h2 class="form__group-title">
-                  Ваши безбашенные достижения в&nbsp;путешествии</h2>
-                </div>
-                <div class="form__fields">
+                    Ваши безбашенные достижения в&nbsp;путешествии</h2>
+                  </div>
+                  <div class="form__fields">
 
-                  <div class="form__entry-field  form__entry-field--switch">
-                    <input class="form__field" type="checkbox" id="selfie" name="selfie" checked>
-                    <label class="form__label" for="selfie">Сделал селфи с&nbsp;акулой</label>
-                  </div>
-                  <div class="form__entry-field  form__entry-field--switch">
-                    <input class="form__field" type="checkbox" id="sunburn" name="sunburn" checked>
-                    <label class="form__label" for="sunburn">Обгорел на&nbsp;пляже</label>
-                  </div>
-                  <div class="form__entry-field  form__entry-field--switch">
-                    <input class="form__field" type="checkbox" id="chuck-norris" name="chuck-norris">
-                    <label class="form__label" for="chuck-norris">Видел Чака Норриса</label>
-                  </div>
-                  <div class="form__entry-field  form__entry-field--switch">
-                    <input class="form__field" type="checkbox" id="souvenirs" name="souvenirs">
-                    <label class="form__label" for="souvenirs">Накупил сувениров</label>
-                  </div>
-                  <div class="form__entry-field  form__entry-field--switch">
-                    <input class="form__field" type="checkbox" id="tower" name="tower" checked>
-                    <label class="form__label" for="tower">Удержал башню</label>
-                  </div>
-                  <div class="form__entry-field  form__entry-field--switch">
-                    <input class="form__field" type="checkbox" id="hotel" name="hotel">
-                    <label class="form__label" for="hotel">Разгромил отель</label>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </fieldset>
-          <fieldset class="form__group  form__group--border  form__group--contact-group">
-            <div class="form__wrapper">
-              <div class="form__border-wrapper">
-                <div class="form__title-wrapper">
-                  <h2 class="form__group-title  form__group-title--hidden">
-                    Контактная информация
-                  </h2>
-                </div>
-                <div class="form__fields">
-                  <div class="form__entry-field  form__entry-field--phone">
-                    <label class="form__label" for="phone-number">
-                      <span>Номерок телефончика</span>
-                      <span>Номер телефона</span>
-                    </label>
-                    <input class="form__field" type="tel" id="phone-number" placeholder="Номер, пожалуйста" name="phone-number">
-                  </div>
-                  <div class="form__entry-field  form__entry-field--mail">
-                    <label class="form__label" for="email">
-                      <span>Адресок почты</span>
-                      <span>Адрес почты</span>
-                    </label>
-                    <input class="form__field" type="email" id="email" placeholder="E-mail, пожалуйста" name="email">
+                    <div class="form__entry-field  form__entry-field--switch">
+                      <input class="form__field" type="checkbox" id="selfie" name="selfie" checked>
+                      <label class="form__label" for="selfie">Сделал селфи с&nbsp;акулой</label>
+                    </div>
+                    <div class="form__entry-field  form__entry-field--switch">
+                      <input class="form__field" type="checkbox" id="sunburn" name="sunburn" checked>
+                      <label class="form__label" for="sunburn">Обгорел на&nbsp;пляже</label>
+                    </div>
+                    <div class="form__entry-field  form__entry-field--switch">
+                      <input class="form__field" type="checkbox" id="chuck-norris" name="chuck-norris">
+                      <label class="form__label" for="chuck-norris">Видел Чака Норриса</label>
+                    </div>
+                    <div class="form__entry-field  form__entry-field--switch">
+                      <input class="form__field" type="checkbox" id="souvenirs" name="souvenirs">
+                      <label class="form__label" for="souvenirs">Накупил сувениров</label>
+                    </div>
+                    <div class="form__entry-field  form__entry-field--switch">
+                      <input class="form__field" type="checkbox" id="tower" name="tower" checked>
+                      <label class="form__label" for="tower">Удержал башню</label>
+                    </div>
+                    <div class="form__entry-field  form__entry-field--switch">
+                      <input class="form__field" type="checkbox" id="hotel" name="hotel">
+                      <label class="form__label" for="hotel">Разгромил отель</label>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </fieldset>
-          <fieldset class="form__group  form__group--grey  form__group--border  form__group--version-group">
-            <div class="form__wrapper">
-              <div class="form__border-wrapper">
-                <div class="form__title-wrapper">
-                  <h2 class="form__group-title">С&nbsp;каким приложением путешествовали?</h2>
-                </div>
-                <div class="form__fields">
-                  <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
-                    <input class="form__field" type="radio" id="ios" name="application" checked>
-                    <label class="form__label" for="ios">Pink для iOS</label>
+            </fieldset>
+            <fieldset class="form__group  form__group--border  form__group--contact-group">
+              <div class="form__wrapper">
+                <div class="form__border-wrapper">
+                  <div class="form__title-wrapper">
+                    <h2 class="form__group-title  form__group-title--hidden">
+                      Контактная информация
+                    </h2>
                   </div>
-                  <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
-                    <input class="form__field" type="radio" id="android" name="application">
-                    <label class="form__label" for="android">Pink на&nbsp;Android</label>
-                  </div>
-                  <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
-                    <input class="form__field" type="radio" id="windows-phone" name="application">
-                    <label class="form__label" for="windows-phone">Windows Phone</label>
+                  <div class="form__fields">
+                    <div class="form__entry-field">
+                      <label class="form__label  form__label--phone" for="phone-number">
+                        <span class="form__mobile-contact-label">Номерок телефончика</span>
+                        <span class="form__contact-label">Номер телефона</span>
+                      </label>
+                      <input class="form__field" type="tel" id="phone-number" placeholder="Номер, пожалуйста" name="phone-number">
+                    </div>
+                    <div class="form__entry-field">
+                      <label class="form__label  form__label--mail" for="email">
+                        <span class="form__mobile-contact-label">Адресок почты</span>
+                        <span class="form__contact-label">Адрес почты</span>
+                      </label>
+                      <input class="form__field" type="email" id="email" placeholder="E-mail, пожалуйста" name="email">
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-          </fieldset>
-          <fieldset class="form__group  form__group--border  form__group--emotions-group">
-            <div class="form__wrapper">
-              <div class="form__border-wrapper">
-                <div class="form__title-wrapper">
-                  <h2 class="form__group-title">
-                    Опишите свои эмоции
-                  </h2>
-                </div>
-                <div class="form__entry-field  form__entry-field--textarea">
-                  <textarea class="form__field" name="coment" id="comment-field" placeholder="Можно прям в красках, не стесняясь в выражениях" ></textarea>
+            </fieldset>
+            <fieldset class="form__group  form__group--grey  form__group--border  form__group--version-group">
+              <div class="form__wrapper">
+                <div class="form__border-wrapper">
+                  <div class="form__title-wrapper">
+                    <h2 class="form__group-title">С&nbsp;каким приложением путешествовали?</h2>
+                  </div>
+                  <div class="form__fields">
+                    <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
+                      <input class="form__field" type="radio" id="ios" name="application" checked>
+                      <label class="form__label" for="ios">Pink для iOS</label>
+                    </div>
+                    <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
+                      <input class="form__field" type="radio" id="android" name="application">
+                      <label class="form__label" for="android">Pink на&nbsp;Android</label>
+                    </div>
+                    <div class="form__entry-field  form__entry-field--switch  form__entry-field--radio">
+                      <input class="form__field" type="radio" id="windows-phone" name="application">
+                      <label class="form__label" for="windows-phone">Windows Phone</label>
+                    </div>
+                  </div>
                 </div>
               </div>
+            </fieldset>
+            <fieldset class="form__group  form__group--border  form__group--emotions-group">
+              <div class="form__wrapper">
+                <div class="form__border-wrapper">
+                  <div class="form__title-wrapper">
+                    <h2 class="form__group-title">
+                      Опишите свои эмоции
+                    </h2>
+                  </div>
+                  <div class="form__entry-field  form__entry-field--textarea">
+                    <textarea class="form__field  form__field--textarea" name="coment" id="comment-field" placeholder="Можно прям в красках, не стесняясь в выражениях" ></textarea>
+                  </div>
+                </div>
+              </div>
+            </fieldset>
+          </div>
+          <div class="form__wrapper">
+            <div class="form__send-container">
+              <input class="button  button--send-form" type="submit" value="Отправить форму">
+              <span class="form__hint"><span>*</span> &mdash;&nbsp;обязательные <span>для заполнения</span> поля</span>
             </div>
-          </fieldset>
-        </div>
-        <div class="form__wrapper">
-          <div class="form__send-container">
-            <input class="button  button--send-form" type="submit" value="Отправить форму">
-            <span class="form__hint"><span>*</span> &mdash;&nbsp;обязательные <span>для заполнения</span> поля</span>
+          </div>
+        </form>
+      </main>
+
+      <footer class="page-footer">
+        <div class="page-footer__wrapper">
+          <div class="page-footer__container">
+            <a class="logo  logo--blue" href="index.html">
+              <svg class="logo__icon-blue"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-mobile"></use></svg>
+              <svg class="logo__icon-blue-desktop"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-desktop"></use></svg>
+            </a>
+            <div class="social-links">
+              <a class="social-links__btn social-links__btn--twitter" target="_blank" href="https://twitter.com/">Twitter</a>
+              <a class="social-links__btn social-links__btn--facebook" target="_blank" href="https://www.facebook.com/">Facebook</a>
+              <a class="social-links__btn social-links__btn--you-tube" target="_blank" href="http://www.youtube.com/">YouTube</a>
+            </div>
+            <div class="page-footer__copyright">
+              <a class="page-footer__copyright-link" target="_blank" href="https://htmlacademy.ru/">
+                Разработано <span>HTML Academy</span>
+                <svg class="page-footer__copyright-icon" width="27" height="34"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use></svg>
+              </a>
+            </div>
           </div>
         </div>
-      </form>
-    </main>
+      </footer>
 
-    <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <div class="page-footer__container">
-          <a class="logo  logo--blue" href="index.html">
-            <svg class="logo__icon-blue"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-mobile"></use></svg>
-            <svg class="logo__icon-blue-desktop"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-desktop"></use></svg>
-        </a>
-        <div class="social-links">
-          <a class="social-links__btn social-links__btn--twitter" href="https://twitter.com/">Twitter</a>
-          <a class="social-links__btn social-links__btn--facebook" href="https://www.facebook.com/">Facebook</a>
-          <a class="social-links__btn social-links__btn--you-tube" href="http://www.youtube.com/">YouTube</a>
+      <!-- класс popup с модификатором hidden скрывает pop up -->
+      <div class="popup  popup--wrong  popup--hidden">
+        <div class="popup__wrapper">
+          <div class="popup__title">
+            Что-то пошло не&nbsp;так!
+          </div>
+          <div class="popup__description">
+            <p>Проверьте поля, выделенные красным, скорее всего вы&nbsp;забыли их&nbsp;заполнить</p>
+          </div>
         </div>
-        <div class="page-footer__copyright">
-          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/">
-            Разработано <span>HTML Academy</span>
-            <svg class="page-footer__copyright-icon" width="27" height="34"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use></svg>
-          </a>
-        </div>
+        <div class="popup__btn-wrapper">
+          <button class="button" type="button">Ок</button>
         </div>
       </div>
-    </footer>
 
-    <!-- класс popup с модификатором hidden скрывает pop up -->
-    <div class="popup  popup--wrong  popup--hidden">
-      <div class="popup__wrapper">
-        <div class="popup__title">
-          Что-то пошло не&nbsp;так!
+      <!-- класс popup с модификатором hidden скрывает pop up -->
+      <div class="popup  popup--success  popup--hidden">
+        <div class="popup__wrapper">
+          <div class="popup__title">
+            Ваша заявка отправлена
+          </div>
+          <div class="popup__description">
+            <p>Спасибо за&nbsp;ваше участие, ваша заявка уже поступила к&nbsp;нам. В ближайшее время мы рассмотрим ее и <span>оповестим вас.</span></p>
+          </div>
         </div>
-        <div class="popup__description">
-          <p>Проверьте поля, выделенные красным, скорее всего вы&nbsp;забыли их&nbsp;заполнить</p>
+        <div class="popup__btn-wrapper">
+          <button class="button" type="button">Закрыть окно</button>
         </div>
-      </div>
-      <div class="popup__btn-wrapper">
-        <button class="button" type="button">Ок</button>
       </div>
     </div>
-
-    <!-- класс popup с модификатором hidden скрывает pop up -->
-    <div class="popup  popup--success  popup--hidden">
-      <div class="popup__wrapper">
-        <div class="popup__title">
-          Ваша заявка отправлена
-        </div>
-        <div class="popup__description">
-          <p>Спасибо за&nbsp;ваше участие, ваша заявка уже поступила к&nbsp;нам. В ближайшее время мы рассмотрим ее и <span>оповестим вас.</span></p>
-        </div>
-      </div>
-      <div class="popup__btn-wrapper">
-        <button class="button" type="button">Закрыть окно</button>
-      </div>
-    </div>
-  </div>
-  <script src="js/picturefill.min.js"></script>
-</body>
-</html>
+    <script src="js/picturefill.min.js"></script>
+  </body>
+  </html>
