--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="main-nav__link" href="form.html">Конкурс</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="https://htmlacademy.ru/">HTML Academy</a>
+            <a class="main-nav__link" target="_blank" href="https://htmlacademy.ru/">HTML Academy</a>
           </li>
         </ul>
       </nav>
@@ -47,11 +47,11 @@
         </div>
         <div class="download-block">
           <div class="download-block__wrapper">
-            <a class="transparent-btn  transparent-btn--white" href="http://www.apple.com/ru/itunes/">Скачать приложение</a>
+            <a class="transparent-btn  transparent-btn--white" target="_blank" href="http://www.apple.com/ru/itunes/">Скачать приложение</a>
             <div class="store-links">
-              <a class="store-links__link  store-links__link--apple" href="http://www.apple.com/ru/itunes/">iTunes</a>
-              <a class="store-links__link  store-links__link--android" href="https://play.google.com/store">Google Play</a>
-              <a class="store-links__link  store-links__link--microsoft" href="https://www.microsoft.com/ru-ru/store/apps/windows-phone">Windows Phone Store</a>
+              <a class="store-links__link  store-links__link--apple" target="_blank" href="http://www.apple.com/ru/itunes/">iTunes</a>
+              <a class="store-links__link  store-links__link--android" target="_blank" href="https://play.google.com/store">Google Play</a>
+              <a class="store-links__link  store-links__link--microsoft" target="_blank" href="https://www.microsoft.com/ru-ru/store/apps/windows-phone">Windows Phone Store</a>
             </div>
             <div class="download-block__text">
               <p>Доступно для iPhone, iPad, Android, Windows Phone, OS&nbsp;X, Windows 8</p>
@@ -97,7 +97,7 @@
           <div class="research__text">
             <p>Британские ученые провели исследования и&nbsp;доказали, что&nbsp;положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
           </div>
-          <a href="#" class="research__link">Узнать больше об&nbsp;исследовании</a>
+          <a class="research__link" href="#" target="_blank">Узнать больше об&nbsp;исследовании</a>
         </div>
       </section>
       <div class="slider slider--comment-slider">
@@ -249,7 +249,7 @@
             </div>
             <div class="contacts-block__contact  contacts-block__contact--email">
               <span class="contacts-block__contact-title">Пишите:</span>
-              <a class="contacts-block__contact-address" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+              <a class="contacts-block__contact-address" href="mailto:mail@htmlacademy.ru" target="_blank">mail@htmlacademy.ru</a>
             </div>
             <div class="contacts-block__contact">
               <span class="contacts-block__contact-title">Приезжайте в&nbsp;гости:</span>
@@ -270,12 +270,12 @@
             <svg class="logo__icon-blue-desktop"  width="147" height="40"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-pink-blue-desktop"></use></svg>
           </a>
           <div class="social-links">
-            <a class="social-links__btn social-links__btn--twitter" href="https://twitter.com/">Twitter</a>
-            <a class="social-links__btn social-links__btn--facebook" href="https://www.facebook.com/">Facebook</a>
-            <a class="social-links__btn social-links__btn--you-tube" href="http://www.youtube.com/">YouTube</a>
+            <a class="social-links__btn social-links__btn--twitter" href="https://twitter.com/" target="_blank">Twitter</a>
+            <a class="social-links__btn social-links__btn--facebook" href="https://www.facebook.com/" target="_blank">Facebook</a>
+            <a class="social-links__btn social-links__btn--you-tube" href="http://www.youtube.com/" target="_blank">YouTube</a>
           </div>
           <div class="page-footer__copyright">
-            <a class="page-footer__copyright-link" href="https://htmlacademy.ru/">
+            <a class="page-footer__copyright-link" href="https://htmlacademy.ru/" target="_blank">
               Разработано <span>HTML Academy</span>
               <svg class="page-footer__copyright-icon" width="27" height="34"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo-htmlacademy"></use></svg>
             </a>
